# IndustrialDebugger

./: BUILD.md  IndustrialDebugger.pro  README.md  test.c  学历之外求职优势积累指南.md  应届求职report_final.md
IndustrialDebugger/: .gitignore  CMakeLists.txt  项目计划.md
IndustrialDebugger/src/DataProcessing/: DataProcessor.cpp  LogManager.cpp  LogManager.h
IndustrialDebugger/src/MainWindow/: MainWindow.cpp
IndustrialDebugger/src/Network/: NetworkManager.cpp  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  UdpClient.h
IndustrialDebugger/src/SerialPort/: SerialPortManager.cpp  SerialPortManager.h
build-IndustrialDebugger-Desktop_Qt_5_12_11_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.IndustrialDebugger.Debug  object_script.IndustrialDebugger.Release
build-IndustrialDebugger-Desktop_Qt_5_12_11_MinGW_64_bit-Debug/debug/: moc_DataProcessor.cpp  moc_LogManager.cpp  moc_MainWindow.cpp  moc_NetworkManager.cpp  moc_SerialPortManager.cpp  moc_TcpClient.cpp  moc_TcpServer.cpp  moc_UdpClient.cpp
src/: main.cpp
src/DataProcessing/: DataProcessor.h
src/MainWindow/: MainWindow.h
src/Network/: NetworkManager.h  UdpClient.cpp
学习笔记/: 00_项目概览.md  01_核心概念.md  02_MainWindow模块.md  03_Network模块.md  README.md  学习进度.md  待解决问题.md
